--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -21,3 +21,13 @@ a{
 .active{
     color: rgb(0, 181, 187);
 }
+
+@media only screen and (max-width: 600px){
+    h1{
+        font-size: 14px;
+    }
+    span{
+        font-size: 14px;
+    }
+
+}
